Closed Bug 1120298 Opened 11 years ago Closed 11 years ago

[Firefox OS] MSE test video can't play after refresh page.

Categories

(Core :: Audio/Video, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38
Tracking Status
firefox35 --- unaffected
firefox36 --- wontfix
firefox37 --- fixed
firefox38 --- fixed
b2g-v2.2 --- fixed
b2g-master --- fixed

People

(Reporter: ayang, Assigned: ayang)

References

Details

Attachments

(1 file, 1 obsolete file)

http://dash-mse-test.appspot.com/dash-player.html Play this page and then press refresh this page to play it again. An error message in log "01-12 01:29:02.489 D/MediaCodecProxy( 3269): MediaCodec has not been inited from input!"
MediaSourceReader needs to override IsDormantNeeded().
Attached patch mse_dormant (obsolete) — Splinter Review
Attachment #8548599 - Flags: review?(ajones)
Attachment #8548599 - Flags: review?(ajones) → review+
Keywords: checkin-needed
(In reply to Alfredo Yang from comment #0) > http://dash-mse-test.appspot.com/dash-player.html > Play this page and then press refresh this page to play it again. Can you explain about how to try the play from the above page? Is b2g phone needs some modifications(like pref) to try the playback?
Flags: needinfo?(ayang)
(In reply to Sotaro Ikeda [:sotaro] from comment #5) > (In reply to Alfredo Yang from comment #0) > > http://dash-mse-test.appspot.com/dash-player.html > > Play this page and then press refresh this page to play it again. > > Can you explain about how to try the play from the above page? Is b2g phone > needs some modifications(like pref) to try the playback? I tried the above page by using master flame. But I failed to do playback, although PC firefox browser can do its playback. Thanks.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
(In reply to Sotaro Ikeda [:sotaro] from comment #6) > (In reply to Sotaro Ikeda [:sotaro] from comment #5) > > (In reply to Alfredo Yang from comment #0) > > > http://dash-mse-test.appspot.com/dash-player.html > > > Play this page and then press refresh this page to play it again. > > > > Can you explain about how to try the play from the above page? Is b2g phone > > needs some modifications(like pref) to try the playback? > > I tried the above page by using master flame. But I failed to do playback, > although PC firefox browser can do its playback. Thanks. I use this patch [1] to enable it on B2G. BTW, due to the MediaElement "preload" is off on B2G, You need to press the play button. [1] http://pastebin.mozilla.org/8228996
Flags: needinfo?(ayang)
Comment on attachment 8548751 [details] [diff] [review] mse_dormant Approval Request Comment [Feature/regressing bug #]: MediaSource [User impact if declined]: Idle YouTube videos won't release their decoders. [Describe test coverage new/current, TreeHerder]: MSE mochitests [Risks and why]: Without this change, the dormant stuff added in bug 1123535 won't engage for YouTube MSE videos, and so idle YouTube MSE videos won't release their resources when they are non-visible and idle. Sorry I didn't realise this wasn't on beta until now... [String/UUID change made/needed]: None.
Attachment #8548751 - Flags: approval-mozilla-beta?
Attachment #8548751 - Flags: approval-mozilla-aurora?
Blocks: 1129298
Comment on attachment 8548751 [details] [diff] [review] mse_dormant Let's put this MSE change on Aurora today to ensure all is good before beta7. Aurora+
Attachment #8548751 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment on attachment 8548751 [details] [diff] [review] mse_dormant MSE won't ship in 36.
Attachment #8548751 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: