Bug 1120298 - add dormant functions in MediaSourceReader for gonk. r=ajones a=lmandel